deploy: 8666c619c66c8e365da732646159638a650eab0c

--- a/slides.html
+++ b/slides.html
@@ -140,7 +140,7 @@
 <li>Een Arduino bordje
 <ul>
 <li>Eventueel een starter kit</li>
-<li>Nu geruik je de <a href="https://store.arduino.cc/collections/boards/products/arduino-uno-rev3-smd">Arduino Uno Rev3 SMD</a></li>
+<li>Nu gebruik je de <a href="https://store.arduino.cc/collections/boards/products/arduino-uno-rev3-smd">Arduino Uno Rev3 SMD</a></li>
 </ul>
 </li>
 <li>Een idee</li>
